<resources>

    <string name="activity_label">Runtime Logger</string>
    <string name="delete_all">Delete All</string>
    <string name="all_files_deleted">All log files deleted</string>
    <string name="delete_confirmation">Are you sure you want to delete file?</string>
    <string name="delete_all_confirmation">Are you sure you want to delete all file?</string>
    <string name="delete_file">Delete File</string>
    <string name="delete">Delete</string>
    <string name="dir_unavailable">Log directory does not exist</string>
    <string name="attach_file_failed">Unable to attach file.</string>
    <string name="file_not_exists">%1$s does not exist at path %2$s</string>
    <string name="file_delete_success">%1$s deleted</string>
    <string name="file_delete_fail">Unable to delete %1$s</string>
    <string name="empty_logs">No logs available</string>
    <string name="current_session">Current session %1$s</string>
    <string name="last_session">Last session %1$s</string>
    <string name="start_logging_session">Start runtime logging session</string>
    <string name="start_session">Start</string>
    <string name="stop_session">Stop</string>
    <string name="save_session">Save</string>
    <string name="runtime_logger_shared_prefs">runtime_logger_shared_prefs</string>
    <string name="pref_key_log_on_startup">log_on_startup</string>
    <string name="pref_key_file_prefix">file_prefix</string>
    <string name="settings_screen">Settings</string>
    <string name="settings_app_startup_title">Log on app startup</string>
    <string name="app_startup_logging_enabled">Logging will be started on main app startup</string>
    <string name="app_startup_logging_disabled">Logging will be disabled on main app startup</string>
    <string name="settings_title_file_prefix">Filename Prefix</string>
    <string name="settings_sub_file_prefix">Prefix to use for log filenames</string>
    <string name="filename_no_prefix">No Prefix</string>

</resources>